--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
+              width="1920"
+              height="888"
               src="./assets/images/slider/ryoji-iwata-large.webp"
               srcset="
                 ./assets/images/slider/ryoji-iwata-small.webp   375w,
@@ -154,6 +156,8 @@
           </div>
           <div class="carousel-item">
             <img
+              width="1920"
+              height="888"
               src="./assets/images/slider/nicholas-green-large.webp"
               srcset="
                 ./assets/images/slider/nicholas-green-small.webp   375w,
@@ -166,6 +170,8 @@
           </div>
           <div class="carousel-item">
             <img
+              width="1920"
+              height="888"
               src="./assets/images/slider/edward-cisneros-large.webp"
               srcset="
                 ./assets/images/slider/edward-cisneros-small.webp   375w,
