--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              width="1920"
-              height="888"
+              max-width="1920"
+              max-height="888"
               src="./assets/images/slider/ryoji-iwata-large.jpg"
               srcset="
                 ./assets/images/slider/ryoji-iwata-small.jpg   375w,
@@ -156,8 +156,8 @@
           </div>
           <div class="carousel-item">
             <img
-              width="1920"
-              height="888"
+              max-width="1920"
+              max-height="888"
               src="./assets/images/slider/nicholas-green-large.jpg"
               srcset="
                 ./assets/images/slider/nicholas-green-small.jpg   375w,
@@ -170,8 +170,8 @@
           </div>
           <div class="carousel-item">
             <img
-              width="1920"
-              height="888"
+              max-width="1920"
+              max-height="888"
               src="./assets/images/slider/edward-cisneros-large.jpg"
               srcset="
                 ./assets/images/slider/edward-cisneros-small.jpg   375w,
